--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driverClassName: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5431/sima-land
     username: postgres
-    password: ${DB_PASSWORD}
+    password: ${DB_PASS}
   jpa:
     hibernate:
       ddl-auto: validate
