--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.itmo</groupId>
     <artifactId>simaland</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>blps-lab-1</name>
     <description>blps-lab-1</description>
     <properties>
