--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ build/
 /src/main/resources/db/changelog/liquibase.flowfile.yaml
 /src/main/resources/db/changelog/liquibase.flowvariables.yaml
 /src/main/resources/db/changelog/liquibase.properties
+
+.DS_Store
