Add topic configuration + optimize dockerfile

--- a/lab/Dockerfile
+++ b/lab/Dockerfile
@@ -1,5 +1,10 @@
 FROM maven:3.8.4-openjdk-17 as builder
 WORKDIR /app
+ADD pom.xml /app
+
+RUN ["/usr/local/bin/mvn-entrypoint.sh", "mvn", "verify", "clean", "--fail-never"]
+
+
 COPY . /app/.
 RUN mvn -f /app/pom.xml clean package -Dmaven.test.skip=true
 
