--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -1,10 +1,5 @@
-FROM maven:3.8.4-openjdk-17 as builder
-WORKDIR /app
-COPY . /app/.
-RUN mvn -f /app/pom.xml clean package -Dmaven.test.skip=true
-
 FROM openjdk:17-oracle
-WORKDIR /app
-COPY --from=builder /app/target/*.jar /app/*.jar
-EXPOSE 8181
-ENTRYPOINT ["java", "-jar", "/app/*.jar"]
+ARG JAR_FILE=consumer/target/*.jar
+COPY ${JAR_FILE} consumer.jar
+EXPOSE 8081
+ENTRYPOINT ["java", "-Dspring.profiles.active=local", "-jar", "/consumer.jar"]
