--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -11,9 +11,11 @@ spring:
     producer:
       confirmation-producer:
         transaction-id: "confirmation"
+  liquibase:
+    change-log: classpath:db.changelog/changelog-master.xml
   jpa:
     hibernate:
-      ddl-auto: create-only
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
