--- a/lab/Dockerfile
+++ b/lab/Dockerfile
@@ -8,6 +8,8 @@ RUN ["/usr/local/bin/mvn-entrypoint.sh", "mvn", "verify", "clean", "--fail-never
 COPY . /app/.
 RUN mvn -f /app/pom.xml clean package -Dmaven.test.skip=true
 
-FROM quay.io/wildfly/wildfly
-COPY --from=builder /app/target/*.war /opt/jboss/wildfly/standalone/deployments/
-ENTRYPOINT /opt/jboss/wildfly/bin/standalone.sh -b=0.0.0.0 -bmanagement=0.0.0.0
+FROM openjdk:17-oracle
+WORKDIR /app
+COPY --from=builder /app/target/*.jar /app/*.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "/app/*.jar"]
